@@ -269,6 +269,9 @@ def get_epix_config_object(env, src) :
     o = cfg.get(_psana.Epix.ConfigV1, src)
     if o is not None : return o
 
+    o = cfg.get(_psana.Epix.Config10kaV1, src)
+    if o is not None : return o
+
     return None
     
 ##-----------------------------
